# medpro-review

./: .env.hostinger.example  .gitignore  DECISIONS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.hostinger.yml  ecosystem.config.js  pyproject.toml
.github/workflows/: auth-validate.yml  backend-validate.yml  connectors-validate.yml  e2e-validate.yml  entity-linker-validate.yml  frontend-validate.yml  gitops-validate.yml  identity-validate.yml  infra-validate.yml  normalizers-validate.yml  observability-validate.yml  opa-validate.yml  payment-service-validate.yml  report-service-validate.yml  search-validate.yml
docs/reference/: architecture-lock.md  component-roster.md  cost-model.md  fcra-blueprints.md  source-priority.md  tool-recommendations.md  tos-matrix.md
docs/session-logs/: 2026-05-24-session-closeout-0b-0c.md  2026-05-24-session-summary-phase-0b.md  2026-05-24-session-summary-phase-0c.md  2026-05-24-session-summary-phase-0d-0e-path-b-1a.md  2026-05-24-session-summary-phase-1b.md  2026-05-24-session-summary-phase-1c-domain.md  2026-05-24-session-summary-phase-1d.md  2026-05-24-session-summary-phase-1e.md  2026-05-24-session-summary.md  2026-05-25-session-closeout-phase-2b-complete.md  2026-05-25-session-summary-phase-1f.md  2026-05-25-session-summary-phase-1g.md  2026-05-25-session-summary-phase-1h.md  2026-05-25-session-summary-phase-1i.md  2026-05-25-session-summary-phase-2a.md  2026-05-25-session-summary-phase-2b1.md  2026-05-25-session-summary-phase-2b2.md  (+25 more)
scripts/: dev-init-postgres.sql  dev-setup.sh  gitops-guard.sh  pm2-start.sh
(+471 files in other folders)
