[tool.poetry]
name = "medpro-review"
version = "0.1.0"
description = "Medical Professionals Review — Healthcare Provider Intelligence Platform"
authors = ["PAGIOS <contact@pagiosystems.com>"]
readme = "README.md"
packages = [
    { include = "schema", from = "src" },
    { include = "data", from = "src" },
    { include = "observability", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7"
pydantic-settings = "^2.3"
alembic = "^1.13"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
structlog = "^24.1"
sentry-sdk = { version = "^2.3", extras = ["fastapi"] }
opentelemetry-sdk = "^1.25"
opentelemetry-instrumentation-fastapi = "^0.46b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
black = "^24.4"
ruff = "^0.4"
mypy = "^1.10"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires live PostgreSQL (DATABASE_URL + AUDIT_DATABASE_URL must be set)",
]
